tests/ui/suggestions/issue-61963.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:22:14
   |
LL |     bar: Box<Bar>,
   |              ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
note: the lint level is defined here
  --> $DIR/issue-61963.rs:3:9
   |
LL | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
help: as this is an "object safe" trait, write `dyn` in front of the trait
   |
LL |     bar: Box<dyn Bar>,
   |              +++

error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:18:1
   |
LL | pub struct Foo {
   | ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: as this is an "object safe" trait, write `dyn` in front of the trait
   |
LL | dyn pub struct Foo {
   | +++

error: aborting due to 2 previous errors

